RESOLVED FIXED239609
[GBM] Debug build broken
https://bugs.webkit.org/show_bug.cgi?id=239609
Summary [GBM] Debug build broken
Philippe Normand
Reported 2022-04-21 09:31:17 PDT
Missing Logging.h include: /app/webkit/Source/WebCore/platform/graphics/gbm/GraphicsContextGLGBM.cpp:226:18: error: use of undeclared identifier 'LOG_CHANNEL_PREFIXWebGL' do { if (LOG_CHANNEL_PREFIXWebGL.state != logChannelStateOff) WTFLog(&LOG_CHANNEL_PREFIXWebGL, "EGLDisplay Initialization failed."); } while (0); ^ /app/webkit/Source/WebCore/platform/graphics/gbm/GraphicsContextGLGBM.cpp:226:79: error: use of undeclared identifier 'LOG_CHANNEL_PREFIXWebGL' do { if (LOG_CHANNEL_PREFIXWebGL.state != logChannelStateOff) WTFLog(&LOG_CHANNEL_PREFIXWebGL, "EGLDisplay Initialization failed."); } while (0); ^ /app/webkit/Source/WebCore/platform/graphics/gbm/GraphicsContextGLGBM.cpp:229:14: error: use of undeclared identifier 'LOG_CHANNEL_PREFIXWebGL' do { if (LOG_CHANNEL_PREFIXWebGL.state != logChannelStateOff) WTFLog(&LOG_CHANNEL_PREFIXWebGL, "ANGLE initialised Major: %d Minor: %d", majorVersion, minorVersion); } while (0); ^
Attachments
Philippe Normand
Comment 1 2022-04-21 09:36:10 PDT
EWS
Comment 2 2022-04-21 10:44:22 PDT
Committed r293177 (249859@main): <https://commits.webkit.org/249859@main> Reviewed commits have been landed. Closing PR #346 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.