[GBM] Debug build broken https://bugs.webkit.org/show_bug.cgi?id=239609

Patch by Philippe Normand <pnormand@igalia.com> on 2022-04-21
Reviewed by Adrian Perez de Castro.

* platform/graphics/gbm/GraphicsContextGLGBM.cpp: Include Logging.h enabling use of logging facilities.

Canonical link: https://commits.webkit.org/249859@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293177 268f45cc-cd09-0410-ab3c-d52691b4dbfc